# UniversalDot-node

./: Cargo.toml  Dockerfile  README.md  chain-spec-plain.json  chain-spec.json
.github/workflows/: audit.yml  check-master.yml  check.yml  publish.yml  test.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/dao/: Cargo.toml
pallets/dao/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/did/: Cargo.toml
pallets/did/src/: benchmarking.rs  did.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/grant/: Cargo.toml  README.md
pallets/grant/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/profile/: Cargo.toml
pallets/profile/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: impls.rs  lib.rs  mock.rs  tests.rs  traits.rs
pallets/task/: Cargo.toml
pallets/task/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: impls.rs  lib.rs
scripts/: check.sh
