[package]
name = 'pallet-dao'
version = '0.7.0'
description = 'Custom pallet for creation decentrilize autonomous organization.'
authors = ['UNIVERSALDOT FOUNDATION <https://github.com/UniversalDot>']
homepage = 'https://universaldot.foundation'
edition = '2021'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/UniversalDot/pallets'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# dependencies
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = "polkadot-v0.9.27"
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '4.0.0-dev'

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.pallet-balances]
version = '4.0.0-dev'
git = 'https://github.com/paritytech/substrate.git'
default-features = false
branch = "polkadot-v0.9.27"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '6.0.0'

# universal
[dependencies.pallet-did]
default-features = false
path = "../did"
package = 'pallet-did'

[dependencies.pallet-profile]
default-features = false
path = '../profile'
version = '0.7.0'

# dev dependencies
[dev-dependencies.once_cell]
version = '1.10.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '4.0.0-dev'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '6.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '6.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.27"
version = '6.0.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
